--- a/.github/workflows/mvn.yml
+++ b/.github/workflows/mvn.yml
@@ -24,12 +24,20 @@ jobs:
         run: mvn --settings server/mvn_settings/settings.xml --batch-mode --update-snapshots -f server/pom.xml -Drepo.login=${{ secrets.IDIR_AS_EMAIL }} -Drepo.password=${{ secrets.IDIR_PASSWORD }} -DskipTests package
         
       - name: Copy files to neccessary folders
-        run: mkdir staging && cp server/wfnews-api-rest-endpoints/target/*.war staging && cp server/wfnews-api-rest-endpoints/target/*.war . && echo "CONFIRMING FILES IN DIR" && ls
+        run: mkdir staging && cp server/wfnews-api-rest-endpoints/target/*.war staging
       
       - uses: actions/upload-artifact@v3
         with:
          name: Package
          path: staging
+         
+      - name: Cache local Maven repository
+        uses: actions/cache@v2
+        with:
+          path: staging
+          key: ${{ runner.os }}-maven-${{ hashFiles('**war.xml') }}
+          restore-keys: |
+            ${{ runner.os }}-maven-
          
   docker:
     needs: build
