--- a/.github/workflows/mvn.yml
+++ b/.github/workflows/mvn.yml
@@ -57,17 +57,11 @@ jobs:
       - name: Set up Docker Buildx
         uses: docker/setup-buildx-action@v2
         
-      - name: Login to DockerHub
-        uses: docker/login-action@v2
-        with:
-          username: ${{ secrets.DOCKERHUB_USERNAME }}
-          password: ${{ secrets.DOCKERHUB_TOKEN }}
-        
       - name: Build and push
         uses: docker/build-push-action@v3
         with:
           context: .
           file: Dockerfile
           push: true
-          tags: ${{ secrets.DOCKERHUB_USERNAME }}/nr-bcws-wfnews-server:latest
+          tags: ${{ secrets.GIT_REPO_USERNAME }}/nr-bcws-wfnews-server:latest
      
