--- a/client/wfnews-war/src/main/angular/.eslintrc.json
+++ b/client/wfnews-war/src/main/angular/.eslintrc.json
@@ -10,7 +10,7 @@
       ],
       "parserOptions": {
         "project": [
-          "wfnews/tsconfig.json",
+          "tsconfig.json",
           "e2e/tsconfig.json"
         ],
         "createDefaultProgram": true
@@ -25,7 +25,7 @@
           "error",
           {
             "type": "element",
-            "prefix": ["false"],
+            "prefix": false,
             "style": "kebab-case"
           }
         ],
