--- a/client/wfnews-war/pom.xml
+++ b/client/wfnews-war/pom.xml
@@ -21,7 +21,7 @@
 		<typescript.path>src/main/angular</typescript.path>
 		<npm.url>https://apps.vividsolutions.com/artifactory/api/npm/npm/</npm.url>
 
-		<webade.datasource.url>jdbc:oracle:thin:@osdb.vividsolutions.com:1521:dev</webade.datasource.url>
+		<webade.datasource.url>${env.WEBADE_JDBC_URL}</webade.datasource.url>
 		<webade.datasource.username>proxy_webade_bootstrap</webade.datasource.username>
 		<webade.datasource.password>password</webade.datasource.password>
 	</properties>
