--- a/client/wfnews-war/pom.xml
+++ b/client/wfnews-war/pom.xml
@@ -19,7 +19,7 @@
         <npm.version>6.14.5</npm.version>
 		<node.path>${user.home}/.node</node.path>
 		<typescript.path>src/main/angular</typescript.path>
-		<npm.url>https://apps.vividsolutions.com/artifactory/api/npm/npm/</npm.url>
+		<npm.url>https://https://apps.nrs.gov.bc.ca/int/artifactory/api/npm/npm/</npm.url>
 
 		<webade.datasource.url>${env.WEBADE_JDBC_URL}</webade.datasource.url>
 		<webade.datasource.username>proxy_webade_bootstrap</webade.datasource.username>
