--- a/.github/workflows/mvn-client.yml
+++ b/.github/workflows/mvn-client.yml
@@ -6,7 +6,7 @@ env:
   REGISTRY: ghcr.io
   IMAGE_NAME: ${{ github.repository }}-client
   WEBADE_JCRS_URL: ${{ secrets.WEBADE_JCRS_URL }}
-  NPM_REPO: ${{ secrets.NPM_REPO }}
+  NPMRC: ${{ secrets.NPMRC }}
 
 # Controls when the workflow will run
 on:
@@ -25,6 +25,9 @@ jobs:
         with:
           java-version: '11'
           distribution: 'adopt'
+          
+      - name: Add .npmrc file
+        run: echo $NPMRC > ~/.npmrc
           
       - name: Build with Maven
         run: mvn --settings server/mvn_settings/settings.xml --batch-mode --update-snapshots -f client/pom.xml -Drepo.login=${{ secrets.IDIR_AS_EMAIL }} -Drepo.password=${{ secrets.IDIR_PASSWORD }} -DskipTests package
