--- a/client/wfnews-war/src/main/angular/package.json
+++ b/client/wfnews-war/src/main/angular/package.json
@@ -46,6 +46,7 @@
     "angular2-uuid": "^1.1.1",
     "assert": "^2.0.0",
     "core-js": "^2.5.7",
+    "dayjs": "^1.11.4",
     "file-size": "^1.0.0",
     "font-awesome": "^4.7.0",
     "jquery": "^3.5.1",
@@ -53,11 +54,14 @@
     "leaflet": "^1.3.3",
     "moment": "^2.22.2",
     "ng-pick-datetime": "^6.0.16",
+    "ng-pick-datetime-ex": "^14.0.0",
     "ng-pick-datetime-moment": "1.0.7",
     "ngrx-store-localstorage": "^7.0.0",
     "ngrx-store-logger": "^0.2.2",
+    "ngx-connection-service": "7.0.3",
     "ngx-mask": "^6.5.18",
     "ngx-moment": "^3.1.0",
+    "ngx-pagination": "^5.1.1",
     "ngx-treeview": "^6.0.2",
     "node-sass": "^7.0.1",
     "popper.js": "^1.14.4",
@@ -67,9 +71,7 @@
     "tslib": "^2.0.0",
     "vanilla-text-mask": "^5.1.1",
     "video.js": "^7.15.4",
-    "zone.js": "~0.11.4",
-    "ngx-pagination": "^5.1.1",
-    "ngx-connection-service": "7.0.3"
+    "zone.js": "~0.11.4"
   },
   "devDependencies": {
     "@angular-devkit/build-angular": "~13.3.8",
