--- a/.github/workflows/mvn-server.yml
+++ b/.github/workflows/mvn-server.yml
@@ -4,7 +4,7 @@ name: Build Server
 
 env:
   REGISTRY: ghcr.io
-  IMAGE_NAME: wfnews-server
+  IMAGE_NAME: ${{ github.repository }}-server
 
 # Controls when the workflow will run
 on:
