--- a/client/wfnews-war/src/main/angular/angular.json
+++ b/client/wfnews-war/src/main/angular/angular.json
@@ -16,7 +16,7 @@
           "builder": "@angular-devkit/build-angular:browser",
           "options": {
             "preserveSymlinks": true,
-            "baseHref": "/wfnews/",
+            "baseHref": "/",
             "outputPath": "dist/wfnews",
             "index": "src/index.html",
             "main": "src/main.ts",
