--- a/client/wfnews-war/src/main/resources/static.properties
+++ b/client/wfnews-war/src/main/resources/static.properties
@@ -1,3 +1,6 @@
 application.version=${project.version}
 build.number=1
 project.acronym=WFNEWS
+openmaps.url=https://test.openmaps.gov.bc.ca/geo/pub/ows
+openmaps.internal.url=https://openmaps.gov.bc.ca/geo/pub/ows
+drivebc.url=http://dev-maps.th.gov.bc.ca/geoV05/ows
