--- a/client/wfnews-war/src/main/resources/static.properties
+++ b/client/wfnews-war/src/main/resources/static.properties
@@ -4,3 +4,4 @@ project.acronym=WFNEWS
 openmaps.url=https://test.openmaps.gov.bc.ca/geo/pub/ows
 openmaps.internal.url=https://openmaps.gov.bc.ca/geo/pub/ows
 drivebc.url=http://dev-maps.th.gov.bc.ca/geoV05/ows
+wfnews.url=http://wfnews-main-alb-dev-1899211340.ca-central-1.elb.amazonaws.com/
