--- a/.github/workflows/mvn-server.yml
+++ b/.github/workflows/mvn-server.yml
@@ -8,7 +8,34 @@ env:
 
 # Controls when the workflow will run
 on:
-  workflow_dispatch:
+  workflow_call:
+    inputs:
+      EMAIL_ENABLED: 
+        type: boolean
+        required: true
+      SMTP_HOSTNAME: 
+        type: string
+      SMTP_USER:
+        type: string
+      SMTP_FROM_EMAIL:
+        type: string
+      ADMIN_EMAIL:
+        type: string
+      EMAIL_SYNC_ERROR_FREQUENCY:
+        type: string
+      EMAIL_SYNC_SEND_FREQUENCY:
+        type: number
+      EMAIL_SYNC_ERROR_SUBJECT:
+        type: string
+      EMAIL_SYNC_SUBJECT:
+        type: string
+      DEFAULT_APPLICATION_ENVIRONMENT:
+        type: string
+    secrets:
+      SMTP_PASSWORD:
+        type: string
+
+
 
 # A workflow run is made up of one or more jobs that can run sequentially or in parallel
 jobs:
@@ -26,6 +53,20 @@ jobs:
           
       - name: Build with Maven
         run: mvn --settings server/mvn_settings/settings.xml --batch-mode --update-snapshots -f server/pom.xml -Drepo.login=${{ secrets.IDIR_AS_EMAIL }} -Drepo.password=${{ secrets.IDIR_PASSWORD }} -DskipTests package
+
+      - name: input properties
+        run:
+          find . -name 'application.properties' | xargs sed -i '/#{wfone.email.notifications.enabled.ind}/${{ env.EMAIL_ENABLED }}/'
+          find . -name 'application.properties' | xargs sed -i '/#{wfone.smtp.host.name}/${{ env.SMTP_HOSTNAME }}/' 
+          find . -name 'application.properties' | xargs sed -i '/#{wfone.smtp.credentials.user}/${{ env.SMTP_USER}}/' 
+          find . -name 'application.properties' | xargs sed -i '/#{wfone.smtp.credentials.password}/${{ secrets.SMTP_PASSWORD }}/' 
+          find . -name 'application.properties' | xargs sed -i '/#{wfone.email.from.address}/${{ SMTP_FROM_ADDRESS }}/' 
+          find . -name 'application.properties' | xargs sed -i '/#{wfone.email.admin.address}/${{ env.ADMIN_EMAIL }}/'
+          find . -name 'application.properties' | xargs sed -i '/#{wfone.email.sync.send.error.frequency}/${{ env.EMAIL_SYNC_ERROR_FREQUENCY }}/'
+          find . -name 'application.properties' | xargs sed -i '/#{wfone.email.sync.send.frequency}/${{ env.EMAIL_SYNC_SEND_FREQUENCY }}/'
+          find . -name 'application.properties' | xargs sed -i '/#{wfone.email.sync.error.subject}/${{ env.EMAIL_SYNC_ERROR_SUBJECT }}/'
+          find . -name 'application.properties' | xargs sed -i '/#{wfone.email.sync.subject}/${{ env.EMAIL_SYNC_SUBJECT }}/'
+          find . -name 'application.properties' | xargs sed -i '/#{wfone.default.application.environment}/${{ env.DEFAULT_APPLICATION_ENVIRONMENT }}/'
         
       - name: Copy files to neccessary folders
         run: mkdir staging && cp server/wfnews-api-rest-endpoints/target/*.war staging
