--- a/.github/workflows/click-build-dev.yml
+++ b/.github/workflows/click-build-dev.yml
@@ -1,7 +1,4 @@
-Name: Build Dev Images
-
-on:
-  workflow_dispatch:
+name: Build Dev Images
 
 env:
   REGISTRY: ghcr.io
@@ -18,6 +15,9 @@ env:
   EMAIL_SYNC_ERROR_SUBJECT: ERROR
   EMAIL_SYNC_SUBJECT: MESSAGE
   DEFAULT_APPLICATION_ENVIRONMENT: wfnews
+
+on:
+  workflow_dispatch:
 
 jobs:
   call-mvn-client:
