--- a/.github/workflows/mvn-server.yml
+++ b/.github/workflows/mvn-server.yml
@@ -33,7 +33,6 @@ on:
         type: string
     secrets:
       SMTP_PASSWORD:
-        type: string
 
 
 
@@ -60,7 +59,7 @@ jobs:
           find . -name 'application.properties' | xargs sed -i '/#{wfone.smtp.host.name}/${{ env.SMTP_HOSTNAME }}/' 
           find . -name 'application.properties' | xargs sed -i '/#{wfone.smtp.credentials.user}/${{ env.SMTP_USER}}/' 
           find . -name 'application.properties' | xargs sed -i '/#{wfone.smtp.credentials.password}/${{ secrets.SMTP_PASSWORD }}/' 
-          find . -name 'application.properties' | xargs sed -i '/#{wfone.email.from.address}/${{ SMTP_FROM_ADDRESS }}/' 
+          find . -name 'application.properties' | xargs sed -i '/#{wfone.email.from.address}/${{ SMTP_FROM_EMAIL }}/' 
           find . -name 'application.properties' | xargs sed -i '/#{wfone.email.admin.address}/${{ env.ADMIN_EMAIL }}/'
           find . -name 'application.properties' | xargs sed -i '/#{wfone.email.sync.send.error.frequency}/${{ env.EMAIL_SYNC_ERROR_FREQUENCY }}/'
           find . -name 'application.properties' | xargs sed -i '/#{wfone.email.sync.send.frequency}/${{ env.EMAIL_SYNC_SEND_FREQUENCY }}/'
