--- a/.github/workflows/terragrunt-deploy.yml
+++ b/.github/workflows/terragrunt-deploy.yml
@@ -133,9 +133,9 @@ jobs:
         working-directory: ${{env.TG_SRC_PATH}}/${{ inputs.TARGET_ENV }}
         env:
           TARGET_ENV: ${{ inputs.TARGET_ENV }}
-          CLIENT_IMAGE: ${{inputs.registry}}/bcgov/${{ inputs.CLIENT_IMAGE }}:${{ inputs.IMAGE_TAG }}
-          SERVER_IMAGE: ${{inputs.registry}}/bcgov/${{ inputs.SERVER_IMAGE }}:${{ inputs.IMAGE_TAG }}
-          LIQUIBASE_IMAGE: ${{inputs.registry}}/bcgov/${{ inputs.LIQUIBASE_IMAGE }}:${{ inputs.IMAGE_TAG }}
+          CLIENT_IMAGE: ${{inputs.registry}}/vivid-cpreston/${{ inputs.CLIENT_IMAGE }}:${{ inputs.IMAGE_TAG }}
+          SERVER_IMAGE: ${{inputs.registry}}/vivid-cpreston/${{ inputs.SERVER_IMAGE }}:${{ inputs.IMAGE_TAG }}
+          LIQUIBASE_IMAGE: ${{inputs.registry}}/vivid-cpreston/${{ inputs.LIQUIBASE_IMAGE }}:${{ inputs.IMAGE_TAG }}
           TFC_PROJECT: ${{ secrets.LICENSE_PLATE }}
           DB_PASS: ${{ secrets.DB_PASS }}
           ALB_NAME: ${{ inputs.ALB_NAME }}
