--- a/docker/Dockerfile_apisix
+++ b/docker/Dockerfile_apisix
@@ -1,8 +1,12 @@
 FROM bitnami/etcd:latest
-EXPOSE 2379 2380
+EXPOSE 2379 2380  8080
 ENV ALLOW_NONE_AUTHENTICATION=yes ETCD_ADVERTISE_CLIENT_URLS=http://127.0.0.1:2379
-RUN --network=host
-
+USER root
+RUN apt-get update &&\
+  apt-get install -y nginx &&\
+  apt-get install -y sed  &&\
+  sed -i '/#!\/usr\/bin\/env bash/#!\/usr\/bin\/env bash\nnginx &/' /docker-entrypoint.sh
+COPY docker/default.conf /etc/nginx/conf.d/default.conf
 
 FROM apache/apisix
 EXPOSE 9080 9443
