--- a/.github/workflows/lambda-zip.yml
+++ b/.github/workflows/lambda-zip.yml
@@ -33,13 +33,6 @@ jobs:
       - uses: montudor/action-zip@v1
         with:
           args: zip -qq -r evacuation-orders-monitor.zip lambda/evacuation-orders-monitor
-        
-      - name: Get source code hash of Zip files
-        run: |
-          openssl sha256 active-fire-monitor.zip > active-fire-monitor-hash.txt
-          openssl sha256 area-restrictions-monitor.zip > area-restrictions-monitor-hash.txt
-          openssl sha256 bans-and-prohibitions-monitor.zip > bans-and-prohibitions-monitor-hash.txt
-          openssl sha256 evacuation-orders-monitor.zip > evacuation-orders-monitor-hash.txt
 
       - name: Make staging directory, copy files
         run: |
@@ -48,18 +41,21 @@ jobs:
           cp area-restrictions-monitor.zip staging/area-restrictions-monitor.zip
           cp bans-and-prohibitions-monitor.zip staging/bans-and-prohibitions-monitor.zip
           cp evacuation-orders-monitor.zip staging/evacuation-orders-monitor.zip
-          cp active-fire-monitor-hash.txt staging/active-fire-monitor-hash.txt
-          cp area-restrictions-monitor-hash.txt staging/area-restrictions-monitor-hash.txt
-          cp bans-and-prohibitions-monitor-hash.txt staging/bans-and-prohibitions-monitor-hash.txt
-          cp evacuation-orders-monitor-hash.txt staging/evacuation-orders-monitor-hash.txt
           cp lambda/lambda-layer/python.zip staging/python.zip
 
-      - uses: shallwefootball/s3-upload-action@master
-        name: Upload S3
-        id: S3
+      - name: Archive lambda functions between jobs
+        uses: actions/upload-artifact@v3
         with:
-          aws_key_id: ${{ secrets.AWS_ACCESS_KEY_ID }}
-          aws_secret_access_key: ${{ secrets.AWS_SECRET_ACCESS_KEY}}
-          aws_bucket: wfnews-lambdas
-          source_dir: staging
-          destination_dir: ''
+          name: lambda-functions
+          path: |
+            staging
+
+      # - uses: shallwefootball/s3-upload-action@master
+      #   name: Upload S3
+      #   id: S3
+      #   with:
+      #     aws_key_id: ${{ secrets.AWS_ACCESS_KEY_ID }}
+      #     aws_secret_access_key: ${{ secrets.AWS_SECRET_ACCESS_KEY}}
+      #     aws_bucket: wfnews-lambdas
+      #     source_dir: staging
+      #     destination_dir: ''
