--- a/.github/workflows/terragrunt-deploy.yml
+++ b/.github/workflows/terragrunt-deploy.yml
@@ -222,6 +222,12 @@ jobs:
       - name: Check out the repo
         uses: actions/checkout@v2
 
+      - name: retrieve lambda artifacts
+        uses: actions/download-artifact@v3
+        with:
+          name: lambda-functions
+          path: ${{env.TG_SRC_PATH}}/lambda-functions
+
       - uses: hashicorp/setup-terraform@v1
         with:
           terraform_version: ${{ env.TF_VERSION }}
